Working Digital transformation Page and Wed design and develop

--- a/consultancy-website-template/html/services/Digital-Strategy.html
+++ b/consultancy-website-template/html/services/Digital-Strategy.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>MARYTECHENOCK SOLUTIONS-Feature</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MARYTECHENOCK - Digital Transformation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -29,8 +30,7 @@
     <!-- Template Stylesheet -->
     <link href="../../css/style.css" rel="stylesheet">
 </head>
-
-<div>
+<body>
     <!-- Topbar Start -->
     <div class="container-fluid bg-secondary ps-5 pe-0 d-none d-lg-block">
         <div class="row gx-0">
@@ -57,7 +57,6 @@
     </div>
     <!-- Topbar End -->
 
-
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
         <img class="logo w-100" src="../../img/Image1.jpeg" alt="Image">
@@ -68,16 +67,16 @@
             <div class="navbar-nav ms-auto py-0 me-n3">
                 <a href="../../index.html" class="nav-item nav-link">Home</a>
                 <a href="../about.html" class="nav-item nav-link">About</a>
-                <a href="../service.html" class="nav-item nav-link">Services</a>
+                <a href="../service.html" class="nav-item nav-link active">Services</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="detail.html" class="dropdown-item">Blog Detail</a>
-                        <a href="feature.html" class="dropdown-item active">Features</a>
-                        <a href="quote.html" class="dropdown-item">Quote Form</a>
-                        <a href="team.html" class="dropdown-item">The Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="../pages/blog.html" class="dropdown-item">Blog Grid</a>
+                        <a href="../pages/detail.html" class="dropdown-item">Blog Detail</a>
+                        <a href="../pages/feature.html" class="dropdown-item">Features</a>
+                        <a href="../pages/quote.html" class="dropdown-item">Quote Form</a>
+                        <a href="../pages/team.html" class="dropdown-item">The Team</a>
+                        <a href="../pages/testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
                 <a href="../contact.html" class="nav-item nav-link">Contact</a>
@@ -86,91 +85,68 @@
     </nav>
     <!-- Navbar End -->
 
-
     <!-- Page Header Start -->
     <div class="container-fluid bg-dark p-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-white">Features</h1>
-                <a href="../../index.html">Home</a>
+                <h1 class="display-4 text-white">Digital Transformation Services</h1>
+                <a href="digital-marketing.html">Digital Marketing</a>
                 <i class="far fa-square text-primary px-2"></i>
-                <a href="">Features</a>
+                <a href="web-design-and-dev.html">Web Design and Development</a>
+                <i class="far fa-square text-primary px-2"></i>
+                <a href="animation-and-3d-product.html">Animation and 3D Product Designing</a>
+                <i class="far fa-square text-primary px-2"></i>
+                <a href="mobile-and-web-app-dev.html">Mobile and Web Application Development</a>
+                <i class="far fa-square text-primary px-2"></i>
+                <a href="it-consulting.html">IT Consulting</a>
+                <i class="far fa-square text-primary px-2"></i>
+                <a href="search-engine-optimization.html">Search Engine Optimization</a>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
-
-    <!-- Features Start -->
-    <div class="container-fluid py-6 px-5">
-        <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 mb-0">Why Choose Us!!!</h1>
-            <hr class="w-25 mx-auto bg-primary">
-        </div>
-        <div class="row g-5">
-            <div class="col-lg-4">
-                <div class="row g-5">
-                    <div class="col-12">
-                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-cubes fs-4 text-white"></i>
+    <!-- Digital transformation information start-->
+    <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
+        <h5 class="text-black text-uppercase">MARYTECHENOCK IT Solutions Specialist</h5>
+                            <h1 class="align-text-center display-1 text-black mb-md-4 ">Lets Build Your Dream Together</h1>
+                            <p data-animation="fadeInUp" data-delay="">At MARYTECHENOCK SOLUTION, we look beyond technology to take a holistic view of every aspect of a client’s business. We take into consideration our client’s internal structure, culture, current technology, and methods of business, and we advise them on whether a new digital infrastructure is the best way to achieve their goals.</p>
+                            <div class="row g-5">
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="service-item bg-secondary text-center px-3">
+                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
+                                        </div>
+                                        <h5 class="mb-3">Digital Strategy</h5>
+                                        <p class="mb-0">As business Analyst we develop strategic roadmaps tailored to our client's people, processes, and technology. MARYTECHENOCK SOLUTIONS can help your organisation come up with a robust <h5 class="text-black text-uppercase">Business Case</h5>for your IT investment.</p>
+                                        <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="service-item bg-secondary text-center px-3">
+                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
+                                        </div>
+                                        <h5 class="mb-3"> Software Selection</h5>
+                                        <p class="mb-0">We help organizations identify their requirements and cut through vendor sales technical language to find the best-fit software for our client business.</p>
+                                        <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="service-item bg-secondary text-center px-3">
+                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
+                                        </div>
+                                        <h5 class="mb-3"> Software Implementation </h5>
+                                        <p class="mb-0">After the selection of the preferred technology has been done, we can help your organization migrate your old data from your legacy system to a new system. We conduct data mapping and cleaning, and systems integration through the Application programming interface (API).</p>
+                                        <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                                    </div>
+                                </div>
+                            <a href="../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br> 
                         </div>
-                        <h3>Best In Industry</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
-                    </div>
-                    <div class="col-12">
-                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-percent fs-4 text-white"></i>
-                        </div>
-                        <h3>99% Success Rate</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
-                    </div>
-                    <div class="col-12">
-                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-award fs-4 text-white"></i>
-                        </div>
-                        <h3>Award Winning</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
                     </div>
                 </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="d-block bg-primary h-100 text-center">
-                    <img class="img-fluid" src="../../img/feature.jpg" alt="">
-                    <div class="p-4">
-                        <p class="text-white mb-4">Clita nonumy sanctus nonumy et clita tempor, et sea amet ut et sadipscing rebum amet takimata amet, sed accusam eos eos dolores dolore et. Et ea ea dolor rebum invidunt clita eos. Sea accusam stet stet ipsum, sit ipsum et ipsum kasd</p>
-                        <a href="" class="btn btn-light py-md-3 px-md-5 rounded-pill mb-2">Learn More</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4">
-                <div class="row g-5">
-                    <div class="col-12">
-                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="far fa-smile-beam fs-4 text-white"></i>
-                        </div>
-                        <h3>100% Happy Client</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
-                    </div>
-                    <div class="col-12">
-                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-user-tie fs-4 text-white"></i>
-                        </div>
-                        <h3>Professional Advisors</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
-                    </div>
-                    <div class="col-12">
-                        <div class="bg-primary rounded-circle d-flex align-items-center justify-content-center mb-3" style="width: 60px; height: 60px;">
-                            <i class="fa fa-headset fs-4 text-white"></i>
-                        </div>
-                        <h3>24/7 Customer Support</h3>
-                        <p class="mb-0">Magna sea eos sit dolor, ipsum amet ipsum lorem diam dolor eos diam et diam dolor ea</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Features Start -->
-    
+    <!-- Digital transformation end here information end-->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
@@ -226,10 +202,9 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#"> 2023 MARYTECHENOCK IT Solutions</a>. All Rights Reserved.<a class="text-secondary border-bottom" href></a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">MARYTECHENOCK IT Solutions</a>. All Rights Reserved. <a class="text-secondary border-bottom" href></a></p>
     </div>
     <!-- Footer End -->
-
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
@@ -245,5 +220,4 @@
     <!-- Template Javascript -->
     <script src="../../js/main.js"></script>
 </body>
-
 </html>
