--- a/consultancy-website-template/html/services/web-design-and-dev.html
+++ b/consultancy-website-template/html/services/web-design-and-dev.html
@@ -108,7 +108,20 @@
 
     <!-- Digital marketing information start-->
     <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
-        WEB DESIGN AND DEVELOPMENT INFO HERE... <br>
+        <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
+            <h5 class="text-black text-uppercase">MARYTECHENOCK YOUR IT Solutions Specialist</h5>
+                                <h1 class="align-text-center display-1 text-black mb-md-4 ">WE CAN HELP YOU BUILD THE FUTURE</h1>
+                                <p data-animation="fadeInUp" data-delay="">We build visually stunning websites that engage visitors and prompt them to take action. Our design process begins with brand research and collaboration on site architecture and visual style and maintains a strict adherence to user interface design practices. We also take into consideration the client's specifications in the design and development. The result is a site that reinforces your brand’s persona and delivers a positive user experience.
+                                    The best design is the one that engages and converts your target audience. We create websites that do more than just look good- they build your brand, convey your message, and deliver on the user’s expectations.
+                                    <h5 class="text-black text-uppercase">Your Website Design & SEO Solution Partner</h5>
+                                    MARYTECHENOCK SOLUTIONS is aware that having a professional website design is key to the legitimacy and effectiveness of your online business. Our websites are designed with a technical knowhow as well as digital marketing expertise. We design attractive, effective, user-friendly customised websites while keeping your business interests in mind. We are dedicated & passionate to provide the best possible service to our clients.
+                                    <h5 class="text-black text-uppercase">World Class Design</h5>
+                                    The design of a website should speaks for itself. We believe that a good website should capture a person’s attention and never let it go. MARYTECHENOCK SOLUTIONS Website Design is experienced in the design and upkeep of websites, we specialise in small enterprise, medium-sized enterprises, or large enterprises and create website designs from static, eCommerce and blogging platforms.
+                                    <h5 class="text-black text-uppercase">Affordable Prices</h5>
+                                    If you’re definitely in search for an more affordable website design, accountable service, and personal attention, call or email today. Other local business website owners are harnessing convenient and affordable internet marketing, what is stopping you? Take advantage of reliable website hosting & proven SEO services.
+                                    <h5 class="text-black text-uppercase">Additional information.</h5>
+                                </p>
+    <div class="row g-5">
         <a href="../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br>
     </div>
     <!-- Digital marketing information end-->
@@ -151,9 +164,10 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>to be updated</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@marytechenock Solutions.com</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+263788684321</p>
+        </div>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
@@ -167,7 +181,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">MARYTECHENOCK IT Solutions</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">2023 MARYTECHENOCK IT Solutions</a>. All Rights Reserved.<a class="text-secondary border-bottom" href></a></p>
     </div>
     <!-- Footer End -->
 
