--- a/consultancy-website-template/index.html
+++ b/consultancy-website-template/index.html
@@ -587,7 +587,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">MARYTECHENOCK SOLUTIONS</a>. All Rights Reserved.<a class="text-secondary border-bottom" href=></a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">2023 MARYTECHENOCK SOLUTIONS</a>. All Rights Reserved.<a class="text-secondary border-bottom" href></a></p>
     </div>
     <!-- Footer End -->
 
