--- a/consultancy-website-template/html/services/digital-transformation.html
+++ b/consultancy-website-template/html/services/digital-transformation.html
@@ -89,7 +89,7 @@
     <div class="container-fluid bg-dark p-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-white">Digital Transformation</h1>
+                <h1 class="display-4 text-white">Digital Transformation Services</h1>
                 <a href="digital-marketing.html">Digital Marketing</a>
                 <i class="far fa-square text-primary px-2"></i>
                 <a href="web-design-and-dev.html">Web Design and Development</a>
@@ -106,12 +106,47 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- Digital marketing information start-->
+    <!-- Digital transformation information start-->
     <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
-        DIGITAL TRANSFORMATION INFO HERE... <br>
-        <a href="../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br>
-    </div>
-    <!-- Digital marketing information end-->
+        <h5 class="text-black text-uppercase">MARYTECHENOCK IT Solutions Specialist</h5>
+                            <h1 class="align-text-center display-1 text-black mb-md-4 ">Lets Build Your Dream Together</h1>
+                            <p data-animation="fadeInUp" data-delay="">At MARYTECHENOCK SOLUTION, we look beyond technology to take a holistic view of every aspect of a client’s business. We take into consideration our client’s internal structure, culture, current technology, and methods of business, and we advise them on whether a new digital infrastructure is the best way to achieve their goals.</p>
+                            <div class="row g-5">
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="service-item bg-secondary text-center px-3">
+                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
+                                        </div>
+                                        <h5 class="mb-3">Digital Strategy</h5>
+                                        <p class="mb-0">As business Analyst we develop strategic roadmaps tailored to our client's people, processes, and technology. MARYTECHENOCK SOLUTIONS can help your organisation come up with a robust <h5 class="text-black text-uppercase">Business Case</h5>for your IT investment.</p>
+                                        <a href="html/services/Digital-Strategy.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="service-item bg-secondary text-center px-3">
+                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
+                                        </div>
+                                        <h5 class="mb-3"> Software Selection</h5>
+                                        <p class="mb-0">We help organizations identify their requirements and cut through vendor sales technical language to find the best-fit software for our client business.</p>
+                                        <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6">
+                                    <div class="service-item bg-secondary text-center px-3">
+                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
+                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
+                                        </div>
+                                        <h5 class="mb-3"> Software Implementation </h5>
+                                        <p class="mb-0">After the selection of the preferred technology has been done, we can help your organization migrate your old data from your legacy system to a new system. We conduct data mapping and cleaning, and systems integration through the Application programming interface (API).</p>
+                                        <a href="html/services/digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
+                                    </div>
+                                </div>
+                            <a href="../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br> 
+                        </div>
+                    </div>
+                </div>
+    <!-- Digital transformation end here information end-->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
@@ -149,11 +184,11 @@
                     <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
-                <h3 class="text-white mb-4">Get In Touch</h3>
-                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
-                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
+                <div class="col-lg-3 col-md-6">
+                    <h3 class="text-white mb-4">Get In Touch</h3>
+                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>to be updated</p>
+                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@marytechenock Solutions.com</p>
+                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+263788684321</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
@@ -167,7 +202,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">MARYTECHENOCK IT Solutions</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">2023 MARYTECHENOCK IT Solutions</a>. All Rights Reserved.<a class="text-secondary border-bottom" href></a></p>
     </div>
     <!-- Footer End -->
 
