add digital transformation services pages

--- a/consultancy-website-template/html/services/digital-transformation-services/software-implemetation.html
+++ b/consultancy-website-template/html/services/digital-transformation-services/software-implemetation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MARYTECHENOCK - Digital Transformation</title>
+    <title>MARYTECHENOCK - Software Implementation</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -22,13 +22,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-    <link href="../../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="../../../lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link href="../../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="../../css/style.css" rel="stylesheet">
+    <link href="../../../css/style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Topbar Start -->
@@ -59,27 +59,27 @@
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm px-5 py-3 py-lg-0">
-        <img class="logo w-100" src="../../img/Image1.jpeg" alt="Image">
+        <img class="logo w-100" src="../../../img/Image1.jpeg" alt="Image">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto py-0 me-n3">
-                <a href="../../index.html" class="nav-item nav-link">Home</a>
-                <a href="../about.html" class="nav-item nav-link">About</a>
-                <a href="../service.html" class="nav-item nav-link active">Services</a>
+                <a href="../../../index.html" class="nav-item nav-link">Home</a>
+                <a href="../../about.html" class="nav-item nav-link">About</a>
+                <a href="../../service.html" class="nav-item nav-link active">Services</a>
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu m-0">
-                        <a href="../pages/blog.html" class="dropdown-item">Blog Grid</a>
-                        <a href="../pages/detail.html" class="dropdown-item">Blog Detail</a>
-                        <a href="../pages/feature.html" class="dropdown-item">Features</a>
-                        <a href="../pages/quote.html" class="dropdown-item">Quote Form</a>
-                        <a href="../pages/team.html" class="dropdown-item">The Team</a>
-                        <a href="../pages/testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="../../pages/blog.html" class="dropdown-item">Blog Grid</a>
+                        <a href="../../pages/detail.html" class="dropdown-item">Blog Detail</a>
+                        <a href="../../pages/feature.html" class="dropdown-item">Features</a>
+                        <a href="../../pages/quote.html" class="dropdown-item">Quote Form</a>
+                        <a href="../../pages/team.html" class="dropdown-item">The Team</a>
+                        <a href="../../pages/testimonial.html" class="dropdown-item">Testimonial</a>
                     </div>
                 </div>
-                <a href="../contact.html" class="nav-item nav-link">Contact</a>
+                <a href="../../contact.html" class="nav-item nav-link">Contact</a>
             </div>
         </div>
     </nav>
@@ -90,63 +90,23 @@
         <div class="row">
             <div class="col-12 text-center">
                 <h1 class="display-4 text-white">Digital Transformation Services</h1>
-                <a href="digital-marketing.html">Digital Marketing</a>
+                <a href="./digital-strategy.html">Digital Strategy</a>
                 <i class="far fa-square text-primary px-2"></i>
-                <a href="web-design-and-dev.html">Web Design and Development</a>
+                <a href="./software-selection.html">Software Selection</a>
                 <i class="far fa-square text-primary px-2"></i>
-                <a href="animation-and-3d-product.html">Animation and 3D Product Designing</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="mobile-and-web-app-dev.html">Mobile and Web Application Development</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="it-consulting.html">IT Consulting</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="search-engine-optimization.html">Search Engine Optimization</a>
+                <a href="./software-implemetation.html">Software Implementation</a>
             </div>
         </div>
     </div>
     <!-- Page Header End -->
 
-    <!-- Digital transformation information start-->
+    <!-- Digital marketing information start-->
     <div class="container-fluid pt-6 px-5" style="min-height: 500px;">
-        <h5 class="text-black text-uppercase">MARYTECHENOCK IT Solutions Specialist</h5>
-                            <h1 class="align-text-center display-1 text-black mb-md-4 ">Lets Build Your Dream Together</h1>
-                            <p data-animation="fadeInUp" data-delay="">At MARYTECHENOCK SOLUTION, we look beyond technology to take a holistic view of every aspect of a client’s business. We take into consideration our client’s internal structure, culture, current technology, and methods of business, and we advise them on whether a new digital infrastructure is the best way to achieve their goals.</p>
-                            <div class="row g-5">
-                                <div class="col-lg-4 col-md-6">
-                                    <div class="service-item bg-secondary text-center px-3">
-                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
-                                        </div>
-                                        <h5 class="mb-3">Digital Strategy</h5>
-                                        <p class="mb-0">As business Analyst we develop strategic roadmaps tailored to our client's people, processes, and technology. MARYTECHENOCK SOLUTIONS can help your organisation come up with a robust <h5 class="text-black text-uppercase">Business Case</h5>for your IT investment.</p>
-                                        <a href="./digital-transformation-services/digital-strategy.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-6">
-                                    <div class="service-item bg-secondary text-center px-3">
-                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
-                                        </div>
-                                        <h5 class="mb-3"> Software Selection</h5>
-                                        <p class="mb-0">We help organizations identify their requirements and cut through vendor sales technical language to find the best-fit software for our client business.</p>
-                                        <a href="./digital-transformation-services/software-selection.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-6">
-                                    <div class="service-item bg-secondary text-center px-3">
-                                        <div class="d-flex align-items-center justify-content-center bg-primary text-white rounded-circle mx-auto mb-4" style="width: 60px; height: 60px;">
-                                            <i class="fa -user-tie fa-2x"></i><img class="w-100" src="../../img/Marytech Logo_Red-03.png" alt="Image">
-                                        </div>
-                                        <h5 class="mb-3"> Software Implementation </h5>
-                                        <p class="mb-0">After the selection of the preferred technology has been done, we can help your organization migrate your old data from your legacy system to a new system. We conduct data mapping and cleaning, and systems integration through the Application programming interface (API).</p>
-                                        <a href="./digital-transformation-services/software-implemetation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Learn more</a>
-                                    </div>
-                                </div>
-                            <a href="../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br> 
-                        </div>
-                    </div>
-                </div>
-    <!-- Digital transformation end here information end-->
+        SOFTWARE IMPLEMENTATION INFO HERE... <br>
+        <a href="../digital-transformation.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To Digital Transformation Services</a>
+        <a href="../../service.html" class="btn btn-primary py-md-3 px-md-5 me-3 rounded-pill">Go Back To All Services</a> <br>
+    </div>
+    <!-- Digital marketing information end-->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-primary text-secondary p-5">
@@ -184,11 +144,11 @@
                     <a class="text-secondary" href="#"><i class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                 </div>
             </div>
-                <div class="col-lg-3 col-md-6">
-                    <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>to be updated</p>
-                    <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@marytechenock Solutions.com</p>
-                    <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+263788684321</p>
+            <div class="col-lg-3 col-md-6">
+                <h3 class="text-white mb-4">Get In Touch</h3>
+                <p class="mb-2"><i class="bi bi-geo-alt text-primary me-2"></i>123 Street, New York, USA</p>
+                <p class="mb-2"><i class="bi bi-envelope-open text-primary me-2"></i>info@example.com</p>
+                <p class="mb-0"><i class="bi bi-telephone text-primary me-2"></i>+012 345 67890</p>
             </div>
             <div class="col-lg-3 col-md-6">
                 <h3 class="text-white mb-4">Follow Us</h3>
@@ -202,7 +162,7 @@
         </div>
     </div>
     <div class="container-fluid bg-dark text-secondary text-center border-top py-4 px-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">2023 MARYTECHENOCK IT Solutions</a>. All Rights Reserved.<a class="text-secondary border-bottom" href></a></p>
+        <p class="m-0">&copy; <a class="text-secondary border-bottom" href="#">MARYTECHENOCK IT Solutions</a>. All Rights Reserved. Designed by <a class="text-secondary border-bottom" href="https://htmlcodex.com">HTML Codex</a></p>
     </div>
     <!-- Footer End -->
 
@@ -213,11 +173,11 @@
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../../lib/easing/easing.min.js"></script>
-    <script src="../../lib/waypoints/waypoints.min.js"></script>
-    <script src="../../lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="../../../lib/easing/easing.min.js"></script>
+    <script src="../../../lib/waypoints/waypoints.min.js"></script>
+    <script src="../../../lib/owlcarousel/owl.carousel.min.js"></script>
 
     <!-- Template Javascript -->
-    <script src="../../js/main.js"></script>
+    <script src="../../../js/main.js"></script>
 </body>
 </html>
